Trying to fix alignment + added style files

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -685,7 +685,7 @@ footer.sticky-bottom {
 
   .grid-sizer,
   .grid-item {
-    width: 250px;
+    width: 240px;
     margin-bottom: 10px;
   }
 
@@ -698,6 +698,32 @@ footer.sticky-bottom {
     text-align: right;
   }
 }
+
+section {
+  height: 370px;
+  width: 1060px;
+  border: 0px;
+  margin-bottom: 0px;
+}
+
+.item-center {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 4px;
+  /* align-items: center; */
+  justify-items: center;
+}
+
+/* align-items: center;
+align-self: center;
+align-content: center;
+text-align: center;
+justify-items: center;
+justify-self: center;
+justify-content: center;
+place-items: center;
+place-self: center;
+place-content: center; */
 
 // Organizers
 
